뉴스레터, 지원금 컨트롤러 수정